# Pietra

./: .gitignore  .mise.toml  BUGS  BUGS.txt  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  TODO  TODO.md  TODOS.txt  a.out  cmake_install.cmake  compile_commands.json  dev.bin.bc  doc.sh  grammar.md  grammar.txt  ideas.txt  main.cpp  makefile  o  old_resolver.cpp  out.pietra  out.pietra.s  pi  pi_theme.vim  pietra  pietra.asm  somefile.txt  temp.cpp  test.cpp
debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
devStd/: Std.pi  Test.pi  Types.pi  test.pi
examples/: argc_argv.pi  argv.pi  bm.pi  callback.pi  cat.pi  dev.pi  errors.pi  example.pi  extern.pi  file.pi  foo.pi  func_type.pi  futures.pi  impl.pi  include_me.pi  json_parser.pi  lambda.pi  list.pi  malloc.pi  mutable_vars.pi  namespaces.pi  package.pi  parse_hex.pi  pcat.pi  preprocessing.pi  printf.pi  ptr.pi  ptr_arrays.pi  rule110.pi  runtime.pi  server.pi  server_html.html  sleep.pi  smart_ptr.pi  stdlib.pi  struct_reassign.pi  structs.pi  swich.pi  ternary.pi  test.pi  (+6 more)
include/: Asmx86_64.hpp  GFSL_compiler.hpp  arena.hpp  ast.hpp  bridge.hpp  cGen.hpp  cmdParser.hpp  cursor.hpp  file.hpp  interns.hpp  lexer.hpp  llvm.hpp  new_lexer.hpp  old_lexer.hpp  packages.hpp  parser.hpp  pietra.hpp  preprocess.hpp  preprocessresult.hpp  resolve.hpp  scope.hpp  smallVec.hpp  srcLocation.hpp  type.hpp
release/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
selfhost/: Asmx86_64.pi  Ast.pi  Compiler.pi  Lexer.pi  Parser.pi  Token.pi  ast.pi  bridge.pi  lexer.pi  (+11 more)
(+135 files in other folders)
